Adapt to latest version of remote simulator

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "description": "Demo application done in balena hackathon session in 2019",
   "scripts": {
-    "start": "node --experimental-modules run-app.js",
-    "server": "node --experimental-modules run-server.js",
-    "simulator": "node --experimental-modules run-simulator.js",
-    "message": "node --experimental-modules run-message.js"
+    "start": "node run-app.js",
+    "server": "node run-server.js",
+    "simulator": "node run-simulator.js",
+    "message": "node run-message.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "ws": "^7.2.0"
   },
   "devDependencies": {
-    "node-sense-hat": "0.0.2"
+    "sense-hat-led": "1.0.1",
+    "sense-joystick": "0.0.3"
   }
 }
