--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "pi-sense-hat-remote-simulator": "git+https://github.com/joanjane/pi-sense-hat-remote-simulator.git",
+    "pi-sense-hat-library": "git+https://github.com/joanjane/pi-sense-hat-library.git",
     "ws": "^7.2.0"
   },
   "devDependencies": {
